# proxmox_backup_orchestrator

./: .env.example  .gitignore  Makefile  README.md
apps/agent/: README.md  pyproject.toml
apps/agent/deploy/systemd/: proxmox-backup-orchestrator-agent-api.service  proxmox-backup-orchestrator-agent.service  proxmox-backup-orchestrator-agent.timer  proxmox-backup-orchestrator-pbs-agent-api.service
apps/agent/src/agent/: main.py  server.py
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: agent.py  backup_runs.py  disks.py  external_backups.py  integrations_pbs.py  integrations_proxmox.py  overview.py  planning.py  vms.py
apps/api/app/core/: config.py
apps/api/app/db/: init.py
apps/api/app/models/: __init__.py  agent_heartbeat.py  backup_run.py  disk_assignment.py  disk_preparation_run.py  external_backup_run.py  external_disk.py  virtual_machine.py
apps/api/app/schemas/: __init__.py  agent.py  backup_run.py  disk_handoff.py  disk_preparation.py  external_backup.py  external_disk.py  integrations_pbs.py  integrations_proxmox.py  overview.py  planning.py  virtual_machine.py
apps/api/app/services/: __init__.py  disk_handoff.py  disk_preparation_agent.py  disk_preparations.py  disks.py  external_backup_agent.py  external_backup_execution.py  external_backups.py  host_agent.py  overview.py  pbs_client.py  pbs_sync.py  planning.py  proxmox_client.py  proxmox_sync.py
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts  utils.ts
apps/web/src/components/: AppShell.tsx  ConfirmModal.tsx  DataTable.tsx  EmptyState.tsx  ErrorBanner.tsx  LoadingBlock.tsx  PageHeader.tsx  PrepareDiskModal.tsx  StatCard.tsx  StatusBadge.tsx
apps/web/src/hooks/: useAppData.ts
apps/web/src/pages/: ActivityPage.tsx  AssetsPage.tsx  DashboardPage.tsx  DisksPage.tsx  shared.ts  (+3 more)
docs/: architecture.md  setup.md
infra/docker/: docker-compose.yml
infra/scripts/: README.md  bootstrap.ps1  bootstrap.sh
